# Galt

./: .gitignore  README  README.md  ground.bash  header.txt  setup.bash
analysis/: README.md
analysis/fruit_tracker/: CMakeLists.txt  package.xml
analysis/fruit_tracker/include/fruit_tracker/: fruit_tracker.hpp  node.hpp
analysis/fruit_tracker/launch/: fruit_tracker.launch
analysis/fruit_tracker/src/: fruit_tracker.cpp  main.cpp  node.cpp
analysis/led/: CMakeLists.txt  package.xml
analysis/led/launch/: intensity_node.launch  intensity_profiler.launch  led_node.launch
analysis/led/scripts/: intensity.py  intensity_node.py  intensity_profiler.py  led_height.py
analysis/led/src/: led_node.cpp
analysis/pcd2octomap/: package.xml
analysis/pcd2octomap/launch/: pcd2ocotomap.launch
analysis/pcl_editor/: CMakeLists.txt  package.xml
analysis/pcl_editor/cfg/: CropperDyn.cfg  MergerDyn.cfg
analysis/pcl_editor/include/pcl_editor/: pcl_cropper_node.hpp  pcl_editor.hpp  pcl_editor_base.hpp  pcl_merger_node.hpp
analysis/pcl_editor/launch/: cropper.launch  merger.launch
analysis/pcl_editor/src/: pcl_cropper_main.cpp  pcl_cropper_node.cpp  pcl_editor.cpp  pcl_merger_main.cpp  pcl_merger_node.cpp
analysis/pcl_merger/: CMakeLists.txt  package.xml
analysis/pcl_merger/include/pcl_merger/: pcl_merger_node.hpp
analysis/pcl_merger/launch/: merger.launch
analysis/pcl_merger/src/: pcl_merger_main.cpp  pcl_merger_node.cpp
core/: README.md
core/circle_tracker/: CMakeLists.txt  package.xml
core/circle_tracker/cfg/: CircleTracker.cfg
core/circle_tracker/launch/: circle_tracker.launch  laser_bag.launch  white_bag.launch
core/circle_tracker/msg/: Circle.msg  Circles.msg
core/circle_tracker/src/: circle_tracker_node.cpp  elliptical_fit.hpp
core/galt_attitude_eskf/: CMakeLists.txt  package.xml
core/galt_attitude_eskf/config/: params_gx4.yaml
core/galt_attitude_eskf/launch/: attitude_eskf.launch  imu.launch
core/galt_attitude_eskf/src/: AttitudeESKF.cpp  AttitudeESKF.hpp  galt_attitude_eskf.cpp  quaternion.cpp  quaternion.hpp
core/galt_calib/: camchain-bagmv_25001185_circle_2.yaml  package.xml  results-cam-bagtest1.txt  results-cam-bagtest2.txt
core/galt_common/: CMakeLists.txt  package.xml
core/galt_common/cmake/: extras.cmake
core/galt_common/include/: math_utils.hpp
core/galt_common/include/galt_common/: error_handling.hpp
core/galt_common/src/: galt_common.cpp
core/galt_spectral/: CMakeLists.txt  package.xml
core/galt_spectral/include/spectral/: CameraCalibration.hpp  FilterProfile.hpp  SensorPoseConfig.hpp  SpectrometerCalibration.hpp  SpectrometerPose.hpp  Spectrum.hpp
core/galt_spectral/src/: CameraCalibration.cpp  FilterProfile.cpp  SensorPoseConfig.cpp  SpectrometerCalibration.cpp  SpectrometerPose.cpp  Spectrum.cpp  yaml_utilities.hpp
core/gps_kf/: CMakeLists.txt  package.xml
core/gps_kf/include/gps_kf/: error_state_kf.hpp  node.hpp
core/gps_kf/launch/: gps_kf.launch
core/gps_kf/src/: node.cpp
core/gps_odom/: CMakeLists.txt  package.xml
core/gps_odom/include/gps_odom/: altitude_kf.hpp  node.hpp
core/gps_odom/install/: README.md
core/gps_odom/launch/: gps_odom.launch
core/gps_odom/src/: altitude_kf.cpp  main.cpp  node.cpp
core/gps_odom/tools/: preview.html
core/graph_recorder/: CMakeLists.txt  package.xml
core/graph_recorder/src/: node.cpp
core/img2pcl/: CMakeLists.txt  package.xml
core/img2pcl/include/img2pcl/: img2pcl_node.h
core/img2pcl/launch/: node.launch  test.launch
core/img2pcl/rviz/: config.rviz
core/img2pcl/src/: img2pcl_main.cpp  img2pcl_node.cpp  voxel_grid.cpp  voxel_grid.h
core/iris_tf/: CMakeLists.txt  package.xml
core/iris_tf/include/iris_tf/: rviz_helper.h
core/iris_tf/launch/: node.launch  p4.launch  test.launch
core/iris_tf/rviz/: config.rviz
core/iris_tf/src/: iris_tf_node.cpp  rviz_helper.cpp
core/laser_altimeter/: CMakeLists.txt
core/ndvi_preview/: package.xml
core/path_capture/: CMakeLists.txt  package.xml
core/path_capture/src/: main.cpp
core/path_replay/: CMakeLists.txt  package.xml
core/path_replay/src/: main.cpp
core/quadrotor_ufk/: CMakeLists.txt  package.xml
core/quadrotor_ufk/config/: params.yaml
core/quadrotor_ufk/launch/: quadrotor_ukf.launch  test.launch
core/quadrotor_ufk/src/: quadrotor_ukf.cpp  quadrotor_ukf.h  quadrotor_ukf_node.cpp
core/receiver/: CMakeLists.txt  package.xml
core/rviz_helper/: CMakeLists.txt  package.xml
core/sam_estimator/: CMakeLists.txt  package.xml
core/sam_estimator/include/sam_estimator/: gtsam.hpp  sam_estimator.hpp  sam_estimator_node.hpp  visualizer.hpp
core/sam_estimator/launch/: sam_estimator.launch  view.launch
core/sam_estimator/rviz/: config.rviz
core/sam_estimator/src/: main.cpp  sam_estimator.cpp  sam_estimator_node.cpp  visualizer.cpp
core/sam_estimator/src/callbacks/: gps_callback.cpp  imu_callback.cpp  laser_callback.cpp  stereo_callback.cpp
core/spec_calib/: CMakeLists.txt  package.xml
core/stereo_vo/: CMakeLists.txt  package.xml
core/thermal_map/: CMakeLists.txt  package.xml
detection/: apple_labeler.py  extract_images.py  extract_pose.py  test.ipynb
detection/.ipynb_checkpoints/: test-checkpoint.ipynb
detection/aye/: __init__.py  assignment.py  aye.py  aye_count.py  aye_main.py  blob_analyser.py  blob_analysis.py  bounding_box.py  detector.py  fruit_detector.py  fruit_track.py  fruit_tracker.py  kalman_filter.py  optical_flow.py  preprocessing.py  track.py  tracker.py  train.py  tune.py  visualization.py
detection/examples/: image_viewer.py  scribble.py
detection/notebook/: assign_detections_to_track.m  bbox.ipynb  chao.ipynb  dt.ipynb  fix_image.ipynb  flow.ipynb  (+13 more)
drivers/: README.md
estimation/: README.md
galt_setup/: CMakeLists.txt  README.md  galt.rviz  package.xml
galt_setup_old/: CMakeLists.txt  README.md  package.xml
launch/: test_driver.launch
reconstruction/: README.md
scripts/: vimrc
tools/: README.md  absorbance.ipynb  extract_images.py  extract_pose.py
utils/: KFbasedTransformPublisher.py  transformPublisher.py  transformQuaternion.py
(+819 files in other folders)
