<?xml version="1.0"?>
<package format="2">
  <name>led</name>
  <version>0.0.0</version>
  <description>The led package</description>

  <maintainer email="chao@todo.todo">chao</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>roscpp</depend>

  <export>
  </export>
</package>
