<?xml version="1.0"?>
<package format="2">
  <name>led</name>
  <version>0.0.0</version>
  <description>LED Utilities. Plots live intensity distributions, shows overexposed areas.</description>

  <maintainer email="anurag.makineni@gmail.com">anurag</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- <depend>sensor_msgs</depend> -->
  <!-- <depend>cv_bridge</depend> -->
  <depend>roscpp</depend>
  <!-- <depend>image_transport</depend> -->

  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>python-numpy</exec_depend>
  <exec_depend>python-matplotlib</exec_depend>
  <exec_depend>opencv2</exec_depend>

  <export>
  </export>
</package>
