<?xml version="1.0"?>
<package>
  <name>pcd2octomap</name>
  <version>0.0.1</version>
  <description>Convert PCD files to Occupancy grids</description>

  <maintainer email="gcross.code@icloud.com">gareth</maintainer>

  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>octomap_ros</build_depend>
  <build_depend>octomap_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <run_depend>octomap_ros</run_depend>
  <run_depend>octomap_msgs</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf2</run_depend>

  <export>
  </export>
</package>