<?xml version="1.0"?>
<package>
  <name>galt_spectral</name>
  <version>0.0.1</version>
  <description>Shared library for handling multispectral imagery</description>

  <maintainer email="gcross.code@icloud.com">gareth</maintainer>

  <license>Proprietary - Not for external release</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <build_depend>kr_math</build_depend>
  <run_depend>kr_math</run_depend>

  <export>
  </export>
</package>
