<?xml version="1.0"?>
<package>
  <name>graph_recorder</name>
  <version>0.0.1</version>
  <description>Record odometry and features to CSV format</description>
  <maintainer email="gcross.code@icloud.com">gareth</maintainer>

  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>kr_math</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>stereo_vo</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>kr_math</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>stereo_vo</run_depend>
  <run_depend>visualization_msgs</run_depend>

  <export>
  </export>
</package>
