<?xml version="1.0"?>
<package>
  <name>img2pcl</name>
  <version>0.0.0</version>
  <description>The img2pcl package</description>

  <maintainer email="quchao@seas.upenn.edu">chao</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>laser_geometry</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>laser_assembler</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>laser_geometry</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>laser_assembler</run_depend>
</package>
