<?xml version="1.0"?>
<package>
  <name>iris_tf</name>
  <version>0.0.4</version>
  <description>The iris_tf package</description>

  <maintainer email="quchao@seas.upenn.edu">Chao Qu</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>tf2_ros</build_depend>

  <run_depend>tf2_ros</run_depend>
</package>
