<?xml version="1.0"?>
<package>
  <name>quadrotor_ukf</name>
  <version>0.0.1</version>
  <author>Shaojie Shen, Kartik Mohta</author>
  <description>UFK for executing IMU/GPS fusion</description>

  <maintainer email="kmohta@seas.upenn.edu">Kartik Mohta</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/quadrotor_ukf</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>kr_math</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>kr_math</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
</package>
